fixed some issues with page spacing

--- a/R/custom-page.css
+++ b/R/custom-page.css
@@ -2,7 +2,7 @@
 
 /* page size */
 @page {
-  size: 9in 12.5in;
+  size: 9in 11.5in;
 }
 
 /* store some string variables */
